--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="box">
         <div class="qr">
-          <img src="/images/image-qr-code.png" alt="" />
+          <img src="images/image-qr-code.png" alt="" />
         </div>
         <div class="text">
           <h1>
